5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1836_1278.log
== TEST (2019-06-26 19:36:32) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=int(input("codigo da cidade: ")) 
soma=0
x= (x1//111)-1 
i=0
j=0
while(x1!=0):
	soma=0
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:38:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input"codigos das cidades: "))
soma=0
x=x1//111
i=0
j=0
print(x)
while(x1!=0):
	soma=0
	
-- ERROR:
File "XXXX", line 10
    x1=array(eval(input"codigos das cidades: "))
                                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 19:38:28) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos das cidades: ")))
soma=0
x=x1//111
i=0
j=0
print(x)
while(x1!=0):
	soma=0
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:16:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
i=0
j=0
x= (x1/111)-1
y= (y1/111)-1
print(x)
while(x1!=0):
	soma= soma + m[x,y]
	y1=array(eval(input("codigo da coluna: ")))
	x1=array(eval(input("codigos da linha: ")))
	x= (x1/111)-1
	y= (y1/111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:22:41) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
i=0
j=0
x= (x1/111)-1
y= (y1/111)-1

while(x1!=-1):
	soma= soma + m[x,y]
	y1=array(eval(input("codigo da coluna: ")))
	x1=array(eval(input("codigos da linha: ")))
	x= (x1/111)-1
	y= (y1/111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:23:15) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
i=0
j=0
x= (x1//111)-1
y= (y1//111)-1

while(x1!=-1):
	soma= soma + m[x,y]
	y1=array(eval(input("codigo da coluna: ")))
	x1=array(eval(input("codigos da linha: ")))
	x= (x1/111)-1
	y= (y1/111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:26:17) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))

x= (x1//111)-1
y= (y1//111)-1

while(x1!=-1):
	soma= soma + m[x,y]
	x1=array(eval(input("codigos da linha: ")))
	y1=array(eval(input("codigo da coluna: ")))
	x= (x1/111)-1
	y= (y1/111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:29:08) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1):
	soma= soma + m[x,y]
	x1=array(eval(input("codigos da linha: ")))
	y1=array(eval(input("codigo da coluna: ")))
	x= (x1//111)-1
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:29:46) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 or y1!= -1):
	soma= soma + m[x,y]
	x1=array(eval(input("codigos da linha: ")))
	y1=array(eval(input("codigo da coluna: ")))
	x= (x1//111)-1
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:40:44) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 ):
	soma= soma + m[x,y]
	x1=array(eval(input("codigos da linha: ")))
	x= (x1//111)-1
	
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:43:19) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while( y1!= -1):
	soma= soma + m[x,y]
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:47:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 or y1!= -1):
	soma= soma + m[x,y]
	x = y
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:48:22) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 or y1!= -1):
	soma= soma + m[x,y]
	x = y1//(111)-1
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:48:45) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 or y1!= -1):
	soma= soma + m[x,y]
	x = y1//(111)-1
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 10:49:24) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 and y1!= -1):
	soma= soma + m[x,y]
	x = y
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 10:49:43) 
-- CODE:
from numpy import*
from numpy.linalg import*
m= array([[0,2,11,6,15,11,1],
	      [2,0,7,12,4,2,15],
	      [11,7,0,11,8,3,13],
	      [6,12,11,0,10,2,1],
	      [15,4,8,10,0,5,13],
	      [11,2,3,1,5,0,14],
	      [1,15,13,1,13,14,0]])
x1=array(eval(input("codigos da linha: ")))
soma=0
y1=array(eval(input("codigo da coluna: ")))
x= (x1//111)-1
y= (y1//111)-1
while(x1!=-1 and y1!= -1):
	soma= soma + m[x,y]
	x = y
	y1=array(eval(input("codigo da coluna: ")))
	y= (y1//111)-1
	
print(soma)	
-- EXECUTION TIME:
1.11172
-- TEST CASE 1:
---- input:
333
555
666
111
-1

---- correct output:
24
---- user output:
24
-- TEST CASE 2:
---- input:
222
777
555
333
666
111
-1

---- correct output:
50
---- user output:
50
-- TEST CASE 3:
---- input:
111
222
111
333
111
555
111
777
-1

---- correct output:
57
---- user output:
57
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
